Изменины города на Новосибирск добавленны адреса

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="container">
             <h2 class="visually-hidden">О нас</h2>
             <div class="description">
-                <h2>Мы — маленькая, но гордая<BR>дизайн-студия из Краснодара.</h2>
+                <h2>Мы — маленькая, но гордая<BR>дизайн-студия из Новосибирска.</h2>
                 <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
                 превыше креатива. Работаем не покладая рук, как роботы.</p>
                 <h3>Выполняем заказы на разработку:</h3>
@@ -211,7 +211,7 @@
     <div class="container">
         <section class="address">
             <h3>NЁRDS DESIGN STUDIO</h3>
-            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p>191186, Новосибирска, ул. Котовского, д. 19/8</p>
             <span>тел. +7 (812) 275-75-75</span>
             <a href="modal-windows.html" class="button button-address">Напишите нам</a>
         </section>
